--- a/wp-content/themes/tkarra/_frontend/scss/components/_hero.scss
+++ b/wp-content/themes/tkarra/_frontend/scss/components/_hero.scss
@@ -1,6 +1,10 @@
+$offset: 65px;
+
 .hero {
+	overflow: visible;
+
 	&__content {
-		padding: 220px 5% 210px;
+		padding: $offset 0 0 10%;
 		position: relative;
 	}
 
@@ -21,7 +25,7 @@
 
 	&__title {
 		font-family: $sans-serif;
-		font-size: 4.5rem;
+		font-size: 3.5rem;
 		font-weight: 500;
 		max-width: 800px;
 	}
@@ -29,22 +33,96 @@
 	&__subtitle,
 	&__subtitle>p {
 		font-size: 1.6rem;
-		margin-top: 55px;
+		font-weight: 500;
+		line-height: 26px;
+		margin-top: 25px;
+		max-width: 800px;
+	}
+
+	&__container-image {
+		margin-top: 65px;
+		overflow: hidden;
+		padding-bottom: 100%;
+		position: relative;
+		z-index: 3;
+	}
+
+	&__image {
+		height: 100%;
+		left: 50%;
+		pointer-events: none;
+		position: absolute;
+		top: 50%;
+		transform: translate(-50%, -50%);
+	}
+
+	+ .flex-row {
+		padding-top: $offset;
+		position: relative;
+		top: -#{$offset};
+		z-index: 2;
 	}
 }
 
 @media screen and (min-width: $md) {
+	$offset: 100px;
+
 	.hero {
 		&__title {
-			font-size: 6.5rem;
+			font-size: 6rem;
+		}
+
+		&__container-image {
+			padding-bottom: 65%;
+		}
+
+		&__image {
+			height: auto;
+			width: 100%;
+		}
+
+		+ .flex-row {
+			padding-top: $offset;
+			top: -#{$offset};
 		}
 	}
 }
 
 @media screen and (min-width: $lg) {
+	$offset: 200px;
+
 	.hero {
-		&__logo {
-			left: 100%;
+		&__content {
+			padding: 75px 0 0 8%;
+
+			&__top {
+				align-items: flex-end;
+				display: flex;
+			}
+		}
+
+		&__title {
+			margin-right: 8%;
+			max-width: 650px;
+		}
+
+		&__subtitle {
+			margin-top: 0;
+			max-width: 565px;
+
+			p {
+				margin-top: 0;
+			}
+		}
+
+		&__container-image {
+			padding-bottom: 43%;
+		}
+
+
+		+ .flex-row {
+			top: -#{$offset};
+			padding-top: calc(#{$offset} + 100px);
 		}
 	}
 }
