Hero variant done

--- a/wp-content/themes/tkarra/_frontend/scss/components/_image-box.scss
+++ b/wp-content/themes/tkarra/_frontend/scss/components/_image-box.scss
@@ -16,5 +16,10 @@
         .image-box--in-first-row & {
             display: block;
         }
+
+        .hero-variant & {
+            position: relative;
+            z-index: 3;
+        }
     }
 }
