--- a/wp-content/themes/tkarra/_frontend/scss/components/_text-box.scss
+++ b/wp-content/themes/tkarra/_frontend/scss/components/_text-box.scss
@@ -85,5 +85,9 @@
 @media screen and (min-width: $xl) {
     .text-box {
         padding: 180px 150px;
+
+        .hero-variant & {
+            padding: 100px 150px 190px;
+        }
     }
 }
