--- a/wp-content/themes/tkarra/_frontend/scss/components/_wpml.scss
+++ b/wp-content/themes/tkarra/_frontend/scss/components/_wpml.scss
@@ -1,5 +1,5 @@
 .wpml-ls {
-  background-color: $white;
+  background-color: $blue;
   border: 0 !important;
   padding: 20px !important;
 }
@@ -13,32 +13,23 @@
 }
 
 .wpml-ls-link {
+  @extend %border;
+
   text-transform: uppercase;
-  color: $blue;
+  color: $white;
   font-size: 1.2rem;
 }
 
 @media screen and (min-width: $lg) {
   .wpml-ls-link {
-    color: $darkgrey;
-    padding: 0 0 0 20px !important;
+    color: $white;
+    padding: 0;
     position: relative;
     transition: color 0.3s;
+  }
 
-    &::before {
-      background-color: $darkgrey;
-      content: '';
-      left: 0;
-      height: 11px;
-      position: absolute;
-      top: calc(50% + 1px);
-      transform: translateY(-50%);
-      width: 1px;
-    }
-
-    &:hover {
-      color: $blue;
-    }
+  .wpml-ls-legacy-list-horizontal a {
+    padding: 0 0 5px !important;
   }
 }
 
