--- a/wp-content/themes/tkarra/_frontend/scss/components/_image-box.scss
+++ b/wp-content/themes/tkarra/_frontend/scss/components/_image-box.scss
@@ -18,7 +18,8 @@
         }
 
         .hero-variant & {
-            position: relative;
+            height: calc(100% + 100px);
+            position: absolute;
             z-index: 3;
         }
     }
