--- a/wp-content/themes/tkarra/_frontend/scss/components/_team-member.scss
+++ b/wp-content/themes/tkarra/_frontend/scss/components/_team-member.scss
@@ -7,7 +7,7 @@
     font-family: $sans-serif;
     font-size: 3rem;
     font-weight: 500;
-    padding: 80px 35px;
+    padding: 80px 5%;
   }
 
   &__content {
