after publish commit

--- a/wp-content/themes/tkarra/_frontend/scss/components/_menu.scss
+++ b/wp-content/themes/tkarra/_frontend/scss/components/_menu.scss
@@ -96,6 +96,10 @@
   align-items: center;
   display: flex;
 
+  .footer & {
+    width: 100%;
+  }
+
   &:hover {
     .footer & {
       background-color: transparent;
